2007-09-13  Lluis Sanchez Gual <lluis@novell.com> 

	* Gui/CSharpTextEditorExtension.cs: Allow showing intrinsic names only when
	  resolving is, as or new.
	* Gui/FormattingPanel.cs, CSharpBinding.mdp,
	  gtk-gui/CSharpBinding.FormattingPanelWidget.cs, gtk-gui/gui.stetic:
	  Updated.
	* Parser/Resolver.cs: The text editor extension needs internalResolve to
	  return the real array types, not only System.Array. Fixes bug #82831.
	* CSharpAmbience.cs: Add support for the new UseIntrinsicNames flag.

2007-09-12  Lluis Sanchez Gual <lluis@novell.com> 

	* Gui/CSharpTextEditorExtension.cs: Don't include abstract classes in the
	  'new' completion list.

2007-09-12  Lluis Sanchez Gual <lluis@novell.com> 

	* Parser/TypeVisitor.cs: Use the fully qualified name when returning the
	  type for array items. Fixes bug #82830.

2007-09-12  Lluis Sanchez Gual <lluis@novell.com> 

	* Parser/Resolver.cs, Parser/TypeVisitor.cs: The 'this' reference is not
	  valid outside of a class member. Fix for bug #82743.

2007-09-12  Lluis Sanchez Gual <lluis@novell.com> 

	* Gui/ChooseRuntimePanel.cs, Gui/CodeGenerationPanel.cs,
	  FormattingStrategy/CSharpFormattingStrategy.cs, CSharpAmbience.cs: Fix
	  warnings.
	* Gui/CSharpTextEditorExtension.cs, Parser/Resolver.cs: Disable code
	  completion inside enum declarations. Fixes bug #82541. Removed some
	  warnings.
	* gtk-gui/generated.cs, gtk-gui/CSharpBinding.CodeGenerationPanelWidget.cs,
	  gtk-gui/CSharpBinding.FormattingPanelWidget.cs, gtk-gui/gui.stetic:
	  Updated.

2007-09-12  Mike Krüger <mkrueger@novell.com> 

	* Gui/CSharpTextEditorExtension.cs: Fixed 82770: MonoDevelop should keep in
	  comments when return is pressed.

2007-09-12  Mike Krüger <mkrueger@novell.com> 

	* Gui/CSharpTextEditorExtension.cs: Fixed 82768: Move cursor after new
	  summary comment.

2007-09-12  Mike Krüger <mkrueger@novell.com> 

	* Parser/CodeGenerator.cs: Fixed 82311: Rename fails when we have two
	  variables that are called the same.
